fixed scrollbar appeard on mobile screen

--- a/mediaq.css
+++ b/mediaq.css
@@ -6,7 +6,7 @@
 
 @media only screen and (max-height: 480px) {
   canvas {
-    height: 100%;
+    height: 100vh;
   }
 
   h1 {
