--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-image: url("./img/polloBG.jpg");
-  max-height: 100vh;
+  background-image: url("./img/polloBG.jpg"); 
+  height: 100%;
   margin: 0;
   background-position: center;
 }
